--- a/colgate/jaeden-ausutine/index.html
+++ b/colgate/jaeden-ausutine/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -13,10 +12,9 @@
 
 <body>
   <div id="info">
-    <h1>Memory Game</h1>
-    <button id="start">Start Game</button>
+    <button id="start">Click Here</button>
     <div id="gameover">
-      <h1 class="gameover">Gameover!</h1>
+      <h1 class="gameover">Done</h1>
       <p class="tryAgain">You ended with a score of
         <span class="finalScore"></span>.
         <br>
@@ -28,8 +26,8 @@
       <div id="time"></div>
     </div>
     <div id="status"></div>
-    <div id="desc">Matching games are games that require players to match similar elements.
-      <br> As the name implies, participants need to find a match for a picture.</div>
+    <div id="desc">Matching Game:
+      <br> Match the cards and see how high of a score you can get.</div>
   </div>
   <div id="app"></div>
   <script src="main.js"></script>
