--- a/colgate/jada-johnson/index.html
+++ b/colgate/jada-johnson/index.html
@@ -19,6 +19,7 @@
     <button id="start">Start Game</button>
     <div id="gameover">
       <h1 class="gameover">Gameover!</h1>
+      <h4>You did it... finally hhrrrrhahhh</h4>
       <p class="tryAgain">You ended with a score of
         <span class="finalScore"></span>.
         <br>
